fixed full app graph height to be 100vh, added alchemy ids, alchemy svg no longer bleeds into other divs

--- a/site/app/styles/_examples.scss
+++ b/site/app/styles/_examples.scss
@@ -36,6 +36,8 @@
 	margin:0;
 	#graph-container{
 		padding:0;
+		// min-height: 100vh;
+		height: 100%;
 	}
 }
 
@@ -82,5 +84,10 @@
 	pre{
 		overflow: scroll;
 		height: 450px;
+	}
+}
+.alchemy{
+	svg{
+		overflow: scroll;
 	}
 }
